--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -15,7 +15,7 @@
         </div>
         <div class="col-sm-6 col-12">
             <h5>Location :</h5>
-            <p>₹ <%= campground.location %>/-</p>
+            <p>₹ <%= campground.location %></p>
         </div>
     </div>
 
