--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,7 +6,7 @@
         <p class="line anim-typewriter">Startup <br> Internship Program</p>
         <p class="college">IIT(BHU) Varanasi</p>
         <a class="knowMore btn btn-outline-info" href="/campgrounds">Find Your Internship <i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-        <i class="fa fa-anchor anchor" aria-hidden="true"></i>
+        <i class="fa fa-anchor anchor" id ="anchor" aria-hidden="true"></i>
     </div>
 
   
