--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -105,6 +105,36 @@
                 }
             }
 
+            @media (max-width: 500px) {
+                .college {
+                    font-size: 22px!important;
+                }
+                .line {
+                    font-size: 26px;
+                    width: 260px;
+                }
+                .knowMore{
+                    position: relative!important;
+                    top: -104px!important;
+                    left: 70px!important;
+                    padding: 12px 18px!important;
+                    font-size: 15px!important;
+                }
+                #anchor{
+                    font-size: 35px!important;
+                }
+                .aboutUs h1{
+                    font-size: 34px!important;
+                }
+                .aboutUs p{
+                    font-size: 14px!important;
+                }
+                .aboutUs{
+                    width: 85%!important;
+                }
+
+            }
+
             .college {
                 color: white;
             font-size: 35px;
