--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -519,7 +519,7 @@
                     <a class="nav-link" href="/campgrounds">Jobs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Know More</a>
+                    <a  class="nav-link" href="/about-us">Know More</a>
                 </li>            
             </ul>
             <% if(!user) { %>
@@ -531,3 +531,15 @@
             <% } %>
         </div>
     </nav>
+    <div class="container">
+        <% if(error && error.length > 0){  %>   <!--To prevent error when error is undefined.   undefined.length gives error --> 
+            <div class="alert alert-danger" role="alert">    <!-- if([]) => returns true . But why ? -->
+            <%= error %>
+            </div>
+        <% } %>
+        <% if(success && success.length > 0){  %>
+            <div class="alert alert-success" role="alert">
+            <%= success %>
+            </div>
+        <% } %> 
+    </div>
