--- a/views/partials/footer2.ejs
+++ b/views/partials/footer2.ejs
@@ -6,9 +6,9 @@
         </div>
         <div class="col-sm-4 col-12">
         <h5>Follow Us</h5>
-        <a href=""><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a><br>
-        <a href=""><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a><br>
-        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+        <a href="https://www.facebook.com/ecelliitvaranasi/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a><br>
+        <a href="https://www.instagram.com/ecelliitbhu/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a><br>
+        <a href="https://twitter.com/ecelliitbhu" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
         </div>
         <div class="col-sm-4 col-12">
         <h5>Contact Us</h5>
@@ -18,10 +18,12 @@
     </div>
     <hr>
     <p>© 2019 | Indian Institute of Technology (Banaras Hindu University) Varanasi. All Rights Reserved. | Disclaimer
-    <br> Website designed & developed in IIT (BHU) Varanasi | Credits</p>
+    <br> Website designed & developed in IIT (BHU) Varanasi | Credits: Divyansh Kumar</p>
 </div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
