stages to final

--- a/views/internships/assessment.ejs
+++ b/views/internships/assessment.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid assessment">
     <h2>Assessment Questions</h2>
-    <form  class="needs-validation " method="POST" action="/campgrounds/<%= campground._id %>/job-apllication?_method=PUT" novalidate>
+    <form  class="needs-validation " method="POST" action="/internships/<%= internship._id %>/job-apllication?_method=PUT" novalidate>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Why should you be hired for this internship? <span>*</span></label>
             <small>Please answer this question carefully. It will increase your chances of getting hired.</small>
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="exampleFormControlTextarea2">Are you available for <%= campground.duration %>, starting immediately, for a work from home internship? If not, what is the time period you are available for and the earliest date you can start this internship on? <span>*</span></label>
+            <label for="exampleFormControlTextarea2">Are you available for <%= internship.duration %>, starting immediately, for a work from home internship? If not, what is the time period you are available for and the earliest date you can start this internship on? <span>*</span></label>
             <small>Please answer this question carefully. It will increase your chances of getting hired.</small>
             <% if(!applied){ %>
             <textarea class="form-control" id="exampleFormControlTextarea2" name ="ans2" rows="3" placeholder="e.g. I am available full time in Pune for the next 6 months, but will have exams for 15 days in June." required></textarea>
@@ -30,7 +30,7 @@
         <% if(!applied){ %>
         <button type="submit" class="btn btn-outline-info">Submit Application</button>
         <% } else { %>
-        <a class="btn btn-outline-info"  href="/campgrounds/<%= campground._id %>"> Back</a>
+        <a class="btn btn-outline-info"  href="/internships/<%= internship._id %>"> Back</a>
         <% } %>
 
     </form>
