--- a/views/internships/new.ejs
+++ b/views/internships/new.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-fluid post-job">
     <h5>Post a new Job</h5>
-    <form method="POST" class="needs-validation post-job-form"  action="/campgrounds" novalidate>
+    <form method="POST" class="needs-validation post-job-form"  action="/internships" novalidate>
         <div class="form-group">
             <label for="company-name">Enter Company Name</label>
             <input class="form-control" type="text" name="company_name" id="company-name" placeholder="Ex. Microsoft" required>
