--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -17,7 +17,7 @@
             crossorigin="anonymous"></script>
         <script src="js/script.js"></script>
         <title>SIP (Startup Internship Portal)</title>
-        <link rel="icon" type="image/x-icon" href="images/logo.png" >
+        <link rel="icon" type="image/x-icon" href="https://i.ibb.co/LvGSXd2/logo.png" >
         <style>
             @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap');
             @import url('https://fonts.googleapis.com/css?family=Lora&display=swap');
@@ -476,7 +476,16 @@
             .job-applied{
                 margin-top: 20px;
                  text-align: center;
-}
+            }
+            .flash{
+                z-index: 1;
+                position: absolute;
+                left: 25%;
+                margin: 20px auto;
+                padding: 0;
+                width: 50%;
+                opacity: 0.7;
+            }
         </style>
         <script>
             $( "p" ).fadeIn( "slow" );
@@ -498,6 +507,7 @@
                 });
             }, false);
             })();
+            setTimeout(function(){$('.flash').remove();}, 5000);
         </script>
 </head>
 <body>
@@ -505,7 +515,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="navbar-brand" href="/">
-            <img src="images/favicon.png" width="100" height="85" class="d-inline-block align-top" alt="">
+            <img src="https://i.ibb.co/HdQxxhY/favicon.png" width="100" height="85" class="d-inline-block align-top" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -516,7 +526,7 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/campgrounds">Jobs</a>
+                    <a class="nav-link" href="/internships">Jobs</a>
                 </li>
                 <li class="nav-item">
                     <a  class="nav-link" href="/about-us">Know More</a>
@@ -531,3 +541,15 @@
             <% } %>
         </div>
     </nav>
+    <div class="container flash">
+        <% if(error && error.length > 0){  %>   <!--To prevent error when error is undefined.   undefined.length gives error --> 
+            <div class="alert alert-danger" role="alert">    <!-- if([]) => returns true . But why ? -->
+            <%= error %>
+            </div>
+        <% } %>
+        <% if(success && success.length > 0){  %>
+            <div class="alert alert-success" role="alert">
+            <%= success %>
+            </div>
+        <% } %> 
+    </div>
