--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,7 +5,7 @@
         <!-- Content here -->
         <p class="line anim-typewriter">Startup <br> Internship Program</p>
         <p class="college">IIT(BHU) Varanasi</p>
-        <a class="knowMore btn btn-outline-info" href="/internships">Find Your Internship <i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+        <p style="text-align: center;"><a class="knowMore btn btn-outline-info" href="/internships">Find Your Internship <i class="fa fa-angle-double-down" aria-hidden="true"></i></a></p>
         <i class="fa fa-anchor anchor" id ="anchor" aria-hidden="true"></i>
     </div>
 
