--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,19 +3,24 @@
 
 <div class="container login">
     <h2>Login</h2>    
-      <p>Login through the portal could be done with the institute email id only.</p>
-      <a href="/auth/google">
-        <div class='g-sign-in-button'>
-          <div class=content-wrapper>
-          <div class='logo-wrapper'>  
-            <img src='https://developers.google.com/identity/images/g-logo.png'>
-            </div>  
-            <span class='text-container'> 
-              <span>Sign in with Google</span>
-            </span>
-          </div>  
-        </div>
-      </a>
+      <p>Login through the portal can be done with the institute email id only.</p>
+      <div style="text-align: center;">
+
+          <a href="/auth/google">
+            <div class='g-sign-in-button'>
+              <div class=content-wrapper>
+              <div class='logo-wrapper'>  
+                <img src='https://developers.google.com/identity/images/g-logo.png'>
+                </div>  
+                <span class='text-container'> 
+                  <span>Sign in with Google</span>
+                </span>
+              </div>  
+            </div>
+          </a>
+
+      </div>
+      
 </div>
   
 
