--- a/views/partials/footer2.ejs
+++ b/views/partials/footer2.ejs
@@ -7,8 +7,8 @@
         <div class="col-sm-4 col-12">
         <h5>Follow Us</h5>
         <a href="https://www.facebook.com/ecelliitvaranasi/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a><br>
-        <a href="https://www.instagram.com/ecelliitbhu/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a><br>
-        <a href="https://twitter.com/ecelliitbhu" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+        <a href="https://twitter.com/ecelliitbhu" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a><br>
+        <a href="https://www.instagram.com/ecelliitbhu/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
         </div>
         <div class="col-sm-4 col-12">
         <h5>Contact Us</h5>
