--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -16,7 +16,7 @@
            <small><%= internship.company_name %></small>
            <div class="row">
              <div class="col-sm-12 col-md-6 field">Duration - <%= internship.duration %></div>
-             <div class="col-sm-12 col-md-6 field"><p class="card-text"><i class="fa fa-map-marker" aria-hidden="true"></i> <%= internship.company_profile %> </p></div>
+             <div class="col-sm-12 col-md-6 field"><p class="card-text"><i class="fa fa-map-marker" aria-hidden="true"></i> <%= internship.location %> </p></div>
            </div>
            <div class="row">
              <div class="col-sm-12 col-md-6 field">Stipend - ₹<%= internship.stipend %></div>
