--- a/views/know-more.ejs
+++ b/views/know-more.ejs
@@ -11,4 +11,9 @@
            Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
     </div>
 
+    <script>
+        $('.navbar-nav li').removeClass('active');
+        $('.aboutclass').addClass('active');
+    </script>
+
 <% include partials/footer2 %>
