--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -39,6 +39,7 @@
 
 <script>
     $('.navbar-nav li').removeClass('active');
+    $('.prof').removeClass('active');
     $('.jobclass').addClass('active');
 </script>
 
