--- a/views/know-more.ejs
+++ b/views/know-more.ejs
@@ -13,7 +13,9 @@
 
     <script>
         $('.navbar-nav li').removeClass('active');
+        $('.prof').removeClass('active');
         $('.aboutclass').addClass('active');
+        
     </script>
 
 <% include partials/footer2 %>
