--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -21,6 +21,7 @@
     </div>
     <script>
         $('.navbar-nav li').removeClass('active');
+        $('.prof').removeClass('active');
         $('.homeclass').addClass('active');
     </script>
 <% include partials/footer2 %>
