--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -47,4 +47,9 @@
 <a class="btn btn-outline-dark" href="/list-jobs" style="text-align: center; margin-top: 20px">All Applied Jobs</a>
 <% } %>
 
+<script>
+    $('.navbar-nav li').removeClass('active');
+    $('.prof').addClass('active');
+</script>
+
 <% include ./partials/footer2 %>
