--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -432,6 +432,9 @@
                 }
             }
             @media (max-width: 400px) {
+                .assessment{
+                    width: 76%;
+                          }              }
                 .profile .row{
                     width: 100%;
                     font-size: 15px;
