--- a/views/internships/show.ejs
+++ b/views/internships/show.ejs
@@ -15,7 +15,7 @@
         </div>
         <div class="col-sm-6 col-12">
             <h5>Location :</h5>
-            <p>₹ <%= internship.location %></p>
+            <p><%= internship.location %></p>
         </div>
     </div>
 
