--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -23,7 +23,7 @@
                 <button type="submit" class="btn btn-outline-dark">Update</button>
             </form>
             <% if(user.phone == null){ %>
-            <p>Please enter the phone number</p>
+            <p style="font-size: 16px; margin-top: 11px; color: red; text-decoration: underline;">Please enter the phone number!</p>
             <% } %>
         </div>
     </div>
