--- a/views/know-more.ejs
+++ b/views/know-more.ejs
@@ -3,7 +3,7 @@
   
     <div class="container aboutUs">
       <h1 class="header"> About SIP</h1>
-      <h5 style="font-size: 20px;">Redefining your internship Experience</h5>
+      <h5 style="font-size: 23px;text-decoration: underline;color: #fa8231;margin-top: 31px;">Redefining your internship Experience</h5>
       <p>Finding the right talent as well as finding the best Internship or Job profile is difficult for both companies and applicants. Startup Internship Portal provides a platform for startups to hire India’s best talent for different profiles, and a platform for students to get an internship in these startups.The students will get exposure to working on real-life projects in a fast-paced environment. With our motto "Internship for all", we aim to provide internship to all in particular to freshers and sophomores by opening maximum possible profiles to cover the necessities of everyone.
     </p>
     </div>
