--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -209,8 +209,9 @@
                 text-decoration: underline;
             }
             .aboutUs p {
-                margin-top: 50px;
+                margin-top: 35px;
                 font-size: 21px;
+                color: #000000b5;
             }
 
             hr {
