--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,7 +3,7 @@
     <!-- Front Look -->
     <div class="container-fluid home-page" style="padding: 0;">
         <!-- Content here -->
-        <p class="line anim-typewriter">Startup <br> Internship Program</p>
+        <p class="line anim-typewriter">Startup <br> Internship Portal</p>
         <p class="college">IIT(BHU) Varanasi</p>
         <p style="text-align: center;"><a class="knowMore btn btn-outline-info" href="/internships">Find Your Internship <i class="fa fa-angle-double-down" aria-hidden="true"></i></a></p>
         <i class="fa fa-anchor anchor" id ="anchor" aria-hidden="true"></i>
