--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -47,7 +47,7 @@
     <% }); %>
 </div>
 
-<% if(currentUser && currentUser.emailid == 'divyansh.kumar.min16@itbhu.ac.in'){ %>
+<% if(currentUser && currentUser.emailid == adminEmail){ %>
 <a class="btn btn-outline-dark" href="/list-jobs" style="text-align: center; margin-top: 20px">All Applied Jobs</a>
 <% } %>
 
