--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -536,7 +536,7 @@
                     <a class="nav-link" href="/internships">Jobs</a>
                 </li>
                 <li class="nav-item aboutclass">
-                    <a  class="nav-link" href="/about-us">Know More</a>
+                    <a  class="nav-link knoww" href="#">Know More</a>
                 </li>            
             </ul>
             <% if(!user) { %>
