--- a/views/partials/header2.ejs
+++ b/views/partials/header2.ejs
@@ -535,8 +535,8 @@
                 <li class="nav-item jobclass">
                     <a class="nav-link" href="/internships">Jobs</a>
                 </li>
-                <li class="nav-item aboutclass">
-                    <a  class="nav-link knoww" href="#tt">Know More</a>
+                <li class="nav-item aboutclass knoww">
+                    <a  class="nav-link" href="#">Know More</a>
                 </li>            
             </ul>
             <% if(!user) { %>
