--- a/views/internships/show.ejs
+++ b/views/internships/show.ejs
@@ -35,7 +35,7 @@
         </div>
         <div class="col-sm-3 col-12">
             <h5>Stipend :</h5>
-            <p>₹ <%= internship.stipend %>/-</p>
+            <p><%= internship.stipend %></p>
         </div>
         <div class="col-sm-3 col-12">
             <h5>Duration of Internship :</h5>
