--- a/views/internships/show.ejs
+++ b/views/internships/show.ejs
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-sm-3 col-12">
             <h5>Job Posted On :</h5>
-             <p><%= internship.job_posted.getDate() %> <%=  internship.job_posted.getMonth() %> <%=  internship.job_posted.getYear() %></p>
+             <p><%= internship.job_posted.toDateString() %> </p>
         </div>
         <div class="col-sm-3 col-12">
             <h5>Stipend :</h5>
