--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -26,7 +26,7 @@
        </div>
      </div>
      <div class="card-footer text-muted">
-         Posted <i class="fa fa-arrow-right" aria-hidden="true"></i> <span> <%= internship.job_posted %></span>
+         Posted <i class="fa fa-arrow-right" aria-hidden="true"></i> <span> <%= internship.job_posted.toDateString() %></span>
      </div>
    </div>
 
