--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -19,7 +19,7 @@
              <div class="col-sm-12 col-md-6 field"><p class="card-text"><i class="fa fa-map-marker" aria-hidden="true"></i> <%= internship.location %> </p></div>
            </div>
            <div class="row">
-             <div class="col-sm-12 col-md-6 field">Stipend - ₹<%= internship.stipend %>/-</div>
+             <div class="col-sm-12 col-md-6 field">Stipend - <%= internship.stipend %></div>
              <div class="col-sm-12 col-md-6 field"><a href="/internships/<%= internship._id %>" class="btn btn-outline-info">View Details</a></div>
            </div>
          </div>
