--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -32,7 +32,7 @@
 
    <% }); %>
    
-   <% if(currentUser && currentUser.emailid == adminEmail){ %>
+   <% if(currentUser && currentUser.email == adminEmail){ %>
    <a class="btn btn-outline-dark new-job" href="/internships/new">Post A New Job</a>
    <% } %>
 </div>
