--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <div class="container login">
     <h2>Login</h2>    
-      <p>Login through the portal can be done with the institute email id only.</p>
+      <p>Register/Login through this portal with your google email id.</p>
       <div style="text-align: center;">
 
           <a href="/auth/google">
