--- a/views/internships/new.ejs
+++ b/views/internships/new.ejs
@@ -68,25 +68,8 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="reponsibility">Can Apply On Portal?</label>
-            <input class="form-control" type="text" id="reponsibility" name="can_appply_portal"  placeholder="Ex. yes or no"  required>
-            <div class="invalid-feedback">
-                Please provide at least one option of the two.
-            </div>
-        </div>
-        <div class="form-group">
             <label for="reponsibility">Email Id</label>
-            <input class="form-control" type="text" id="reponsibility" name="emailId"  placeholder="example@gmail.com"  required>
-            <div class="invalid-feedback">
-                Please provide emailId.
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="reponsibility">Email Application Requirement</label>
-            <input class="form-control" type="text" id="reponsibility" name="email_app_req"  placeholder="Write to us at  with a Brief cover letter and attach your resume"  required>
-            <div class="invalid-feedback">
-                Please provide emailId.
-            </div>
+            <input class="form-control" type="text" id="reponsibility" name="email"  placeholder="example@gmail.com">
         </div>
         <hr>
         <button class="btn btn-light post-job-submit" type="submit">Submit form</button>
