--- a/views/internships/show.ejs
+++ b/views/internships/show.ejs
@@ -1,13 +1,17 @@
 
 <% include ../partials/header2 %>
-
+<style>
+    #test{
+      white-space: pre-wrap;
+    }
+  </style>
 <div class="container-fluid internship-detail">
     <h2>Internship Details</h2>
     <% if(applied){ %>
     <span style="background: #fa8231;color: white;padding: 10px 20px;float: right;">Applied</span>
     <% } %>
     <h5 style="margin-top: 60px;">About <%= internship.company_name %> :</h5>
-    <p id ="test"><%= internship.company_details %></p>
+    <p  id="test"><%= internship.company_details %></p>
     <div class="row">
         <div class="col-sm-6 col-12">
             <h5>Internship Profile :</h5>
@@ -60,8 +64,5 @@
     <% } %>
 </div>
 
-<script>
-    $("#test").val(replace($("#test").val(), "<br>", "&#10;")));
-</script>
 
 <% include ../partials/footer2 %>
