--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -1,5 +1,10 @@
 <% include ../partials/header2 %>
-
+<style >
+  .btn{
+    color:#ff0063;
+    border-color:rgb(255, 47, 72);
+  }
+</style>
 <div class="container-fluid job-portal">
     <!-- Featured Internship-->
    <h2> Find Your Suitable Internship</h2>
