--- a/views/internships/new.ejs
+++ b/views/internships/new.ejs
@@ -11,6 +11,10 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="company-name">Logo URL</label>
+            <input class="form-control" type="text" name="logo_url" id="logo-url" placeholder="https://example.com">
+        </div>
+        <div class="form-group">
             <label for="intern-profile">Enter Profile Name</label>
             <input class="form-control" type="text" name="intern_profile" id="intern-profile" placeholder="Ex. UI/UX Developer" required>
             <div class="invalid-feedback">
