--- a/views/internships/edit.ejs
+++ b/views/internships/edit.ejs
@@ -11,6 +11,10 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="company-name">Logo URL</label>
+            <input class="form-control" type="text" name="internship[logo_url]" id="logo-url" value="<%= internship.logo_url %>" placeholder="https://example.com">
+        </div>
+        <div class="form-group">
             <label for="intern-profile">Enter Profile Name</label>
             <input class="form-control" type="text" name="internship[company_profile]" value="<%= internship.company_profile %>" id="intern-profile" placeholder="Ex. UI/UX Developer" required>
             <div class="invalid-feedback">
