--- a/views/internships/index.ejs
+++ b/views/internships/index.ejs
@@ -15,7 +15,7 @@
      </div>
      <div class="card-body">
        <div class="row">
-         <div class="col-md-3 col-sm-4 col-12"><img src="images/empty.png" width="100" height="85" class="d-inline-block align-top" alt=""> </div>
+         <div class="col-md-3 col-sm-4 col-12"><img src="<%= internship.logo_url %>" width="100" height="85" class="d-inline-block align-top" alt=""> </div>
          <div class=" col-md-9 col-sm-8 col-12">
           <small style="font-size: 19px;text-decoration:underline;color: #ff0048;"><%= internship.company_name %></small>
            <h5 class="card-title" style="font-size: 14px;margin-top: 6px;"><%= internship.company_profile %></h5>
