--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
           <button style="margin-top: 50px;padding: 10px 30px;" class="btn btn-light post-job-submit" type="submit">Login</button>
         </form>
       </div>
-      <hr style="width: 400px;height: 2px;">
+<!--       <hr style="width: 400px;height: 2px;">
       <div style="text-align: center;">
         <p style="font-weight: bold;">OR</p>
         <p style="text-decoration: underline;">For IIT BHU Students( Not On E-Summit'20)</p>
@@ -31,7 +31,7 @@
             </div>
           </a>
 
-      </div>
+      </div> -->
 
       
       
